@@ -2561,6 +2561,7 @@ DRIVER(bnzai,l3)        //          05/88 W Banzai Run (L-3)
 DRIVER(bnzai,g3)        //          05/88 W Banzai Run (G-3 German)
 DRIVER(bnzai,t3)        //          10/11 W Banzai Run (L-3 Target sound fix)
 DRIVER(swrds,l1)        //S11-559:  06/88 W Swords of Fury (L-1)
+DRIVER(swrds,lg2)       //          06/88 W Swords of Fury (LG-2 German)
 DRIVER(swrds,l2)        //          06/88 W Swords of Fury (L-2)
 DRIVER(taxi,p5)         //S11-553:  08/88 W Taxi (P-5)
 DRIVER(taxi,lu1)        //          08/88 W Taxi (Marilyn LU-1 Europe)
