@@ -49,6 +49,7 @@ Metallica 0.52
 Pin-Bot J-2 (PEMBOT (no relation)) (MOD)
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
 Spirit (initial release) & rev. 3 (MOD)
+Swords of Fury LG-2 (German)
 Tommy 1.02 (Belgian), 3.01 (German)
 White Water P-6 (Prototype)
 Wildfyre (One Ball MOD)
